[package]
name = "cuda-sys"
version = "0.2.1-alpha.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

build = "build.rs"
links = "cuda"

description   = "Rust binding to CUDA Driver/Runtime APIs"
documentation = "https://docs.rs/cuda-sys/"
repository    = "https://github.com/termoshtt/accel"
keywords      = ["GPGPU", "CUDA", "ffi"]
license       = "MIT"
readme        = "README.md"
categories    = []

[features]
default       = ["cuda_8_0"]
cuda_6_5      = []
cuda_7_0      = ["gte_cuda_7_0"]
cuda_7_5      = ["gte_cuda_7_0", "gte_cuda_7_5"]
cuda_8_0      = ["gte_cuda_7_0", "gte_cuda_7_5", "gte_cuda_8_0"]
cuda_9_0      = ["gte_cuda_7_0", "gte_cuda_7_5", "gte_cuda_8_0", "gte_cuda_9_0"]
cuda_9_1      = ["gte_cuda_7_0", "gte_cuda_7_5", "gte_cuda_8_0", "gte_cuda_9_0", "gte_cuda_9_1"]
cuda_9_2      = ["gte_cuda_7_0", "gte_cuda_7_5", "gte_cuda_8_0", "gte_cuda_9_0", "gte_cuda_9_1", "gte_cuda_9_2"]
cuda_10_0     = ["gte_cuda_7_0", "gte_cuda_7_5", "gte_cuda_8_0", "gte_cuda_9_0", "gte_cuda_9_1", "gte_cuda_9_2", "gte_cuda_10_0"]
gte_cuda_7_0  = []
gte_cuda_7_5  = []
gte_cuda_8_0  = []
gte_cuda_9_0  = []
gte_cuda_9_1  = []
gte_cuda_9_2  = []
gte_cuda_10_0 = []

[dependencies]
static_assertions = "0.3.1"
