[package]
name = "cublas-sys"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

[dependencies.cuda-driver-sys]
path = "../cuda-driver-sys"

[dependencies.cuda-runtime-sys]
path = "../cuda-runtime-sys"

[build-dependencies]
cuda-searcher = { path = "../cuda-searcher" }
