[package]
name = "cublas-sys"
version = "0.3.0-alpha.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

build = "build.rs"
links = "cublas"

description   = "Rust binding to CUDA BLAS API"
documentation = "https://docs.rs/cublas-sys/"
repository    = "https://github.com/rust-cuda/cuda-sys"
keywords      = ["GPGPU", "CUDA", "ffi"]
license       = "MIT"
readme        = "../README.md"
categories    = []

[build-dependencies.cuda-config]
path = "../cuda-config"
version = "0.1.0"
