[package]
name = "cuda-config"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description   = "Helper crate for finding CUDA libraries"
documentation = "https://docs.rs/cuda-config/"
repository    = "https://github.com/rust-cuda/cuda-sys"
keywords      = ["GPGPU", "CUDA", "ffi"]
license       = "MIT/Apache-2.0"
readme        = "../README.md"
categories    = []

[dependencies]
glob = "0.3"
