[package]
name = "cuda-driver-sys"
version = "0.3.1"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

build = "build.rs"
links = "cuda-11.5"

description   = "Rust binding to CUDA Driver APIs"
documentation = "https://docs.rs/cuda-runtime-sys/"
repository    = "https://github.com/rust-cuda/cuda-sys"
keywords      = ["GPGPU", "CUDA", "ffi"]
license       = "MIT/Apache-2.0"
readme        = "../README.md"
categories    = []
