[package]
name = "cuda-gl-interop-sys"
version = "0.4.0-alpha.1"
authors = ["Raniz <raniz@raneland.se>"]
edition = "2018"

build = "build.rs"

description   = "Rust binding to CUDA Runtime OpenGL Interop APIs"
documentation = "https://docs.rs/cuda-gl-interop-sys/"
repository    = "https://github.com/rust-cuda/cuda-sys"
keywords      = ["GPGPU", "CUDA", "ffi"]
license       = "MIT/Apache-2.0"
readme        = "../README.md"
categories    = []

[build-dependencies.cuda-config]
path = "../cuda-config"
version = "0.1.0"

[dependencies.gl]
version = "~0.14"

[dependencies.cuda-types-sys]
path = "../cuda-types-sys"
