[package]
name = "cuda-runtime-sys"
version = "0.4.0-alpha.1"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

build = "build.rs"
links = "cudart"

description   = "Rust binding to CUDA Runtime APIs"
documentation = "https://docs.rs/cuda-runtime-sys/"
repository    = "https://github.com/rust-cuda/cuda-sys"
keywords      = ["GPGPU", "CUDA", "ffi"]
license       = "MIT/Apache-2.0"
readme        = "../README.md"
categories    = []

[build-dependencies.cuda-config]
path = "../cuda-config"
version = "0.1.0"

[dependencies.cuda-types-sys]
path = "../cuda-types-sys"
