[package]
name = "cuda-types-sys"
version = "0.4.0-alpha.1"
authors = ["Daniel Raneland <raniz@raneland.se>"]
edition = "2018"

build = "build.rs"

description   = "Rust binding to CUDA driver and runtime types"
documentation = "https://docs.rs/cuda-types-sys/"
repository    = "https://github.com/rust-cuda/cuda-sys"
keywords      = ["GPGPU", "CUDA", "ffi"]
license       = "MIT/Apache-2.0"
readme        = "../README.md"
categories    = []

[build-dependencies.cuda-config]
path = "../cuda-config"
version = "0.1.0"
